Issues fixed and more tests done